--- a/myshop.css
+++ b/myshop.css
@@ -1,54 +1,187 @@
-body {
-  font-family: Arial, sans-serif;
-  background-color: #f4f4f4;
+@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Poppins:wght@400;700;800&display=swap');
+
+@import url('https://fonts.googleapis.com/css2?family=Permanent+Marker&display=swap');
+
+:root {
+  --bg-color-navbar: #1995ad;
+  --bg-color-body: #a1d6e2;
+
+  /* Fonts */
+  --font-text-color: #000000;
+  --font-size: 1.5rem;
+}
+
+* {
   margin: 0;
   padding: 0;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: flex-start;
-  height: 100vh;
+  box-sizing: border-box;
+  font-family: 'Lato', sans-serif;
 }
 
+body {
+  background-color: var(--bg-color-body);
+  margin-top: 5rem;
+}
 h1 {
+  font-size: 1.5rem;
+  padding: 2.5rem;
+  text-decoration: overline;
+  color: rgb(21, 1, 1);
   text-align: center;
-  margin-top: 20px;
+  background-color: #a8cad1;
 }
 
-form {
-  background-color: #fff;
-  padding: 20px;
-  border-radius: 5px;
-  box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
-  width: 300px;
-  margin-top: 20px;
-}
-
-label {
-  display: block;
-  margin-bottom: 5px;
-}
-
-input[type='text'],
-input[type='number'] {
-  width: calc(100% - 10px); /* Adjust input width */
-  padding: 8px;
-  margin-bottom: 15px;
-  border: 1px solid #ccc;
-  border-radius: 4px;
-}
-
-button {
+.nav-container {
+  display: flex;
+  background-color: var(--bg-color-navbar);
+  align-items: center;
+  justify-content: space-between;
+  position: fixed;
   width: 100%;
-  background-color: #4caf50;
-  color: white;
-  padding: 10px 20px;
-  border: none;
-  border-radius: 4px;
-  cursor: pointer;
-  margin-top: 15px; /* Add margin to separate from inputs */
+  height: 5rem;
+  top: 0;
+  z-index: 6000000;
 }
 
-button:hover {
-  background-color: #45a049;
+.nav-container a img {
+  height: 3rem;
+  margin-left: 3rem;
+}
+.navbar {
+  display: flex;
+  align-items: center;
+  list-style-type: none;
+}
+
+.nav-link {
+  text-decoration: none;
+  color: var(--font-text-color);
+  margin-right: 2.5rem;
+}
+.navbar span {
+  text-decoration: none;
+  color: var(--font-text-color);
+  margin-right: 2.5rem;
+}
+.active {
+  color: rgb(100, 7, 7);
+  text-decoration: underline;
+}
+.welcome-area {
+  display: inline-block;
+  /* position: relative; */
+  width: 100%;
+}
+.welcome-area img {
+  display: block;
+  width: 100%;
+  height: 40rem;
+}
+.overlay-text {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: #1e1e1e;
+  padding: 10px 20px;
+  font-size: 20px;
+  text-align: center;
+}
+.overlay-text h2 {
+  display: block;
+  font-family: 'Permanent-marker', sans-serif;
+  padding: 1.5rem;
+  font-weight: 500;
+  text-shadow: 2px 3px 3px red;
+}
+.overlay-text a {
+  text-decoration: none;
+  background-color: rgb(239, 226, 235);
+  border-radius: 6px;
+  box-shadow: 3px 3px 2px black;
+}
+
+.overlay-text a:hover {
+  background-color: rgb(189, 47, 163);
+}
+
+/* links inside the dropdown */
+.dropdown-a1 {
+  display: block;
+  color: black;
+  text-decoration: none;
+  padding: 10px 15px;
+}
+.dropdown-a1:hover {
+  width: 100px;
+  background-color: white;
+  border-radius: 10px;
+}
+.dropdown .dropdown-content {
+  display: none;
+  position: fixed;
+  background-color: #7ccaf1;
+  width: 100px;
+  padding-right: 2rem;
+  border-radius: 10px;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.185);
+}
+.dropdown:hover .dropdown-content {
+  display: block;
+}
+
+@media screen and (max-width: 600px) {
+  .main-body {
+    margin-top: 3rem;
+  }
+  h1 {
+    font-size: 0.8rem;
+  }
+
+  .nav-container {
+    height: 3rem;
+    font-size: 0.8rem;
+    top: 0;
+  }
+  .nav-container a img {
+    height: 1.5rem;
+    margin-left: 0.7rem;
+  }
+  .navbar li a {
+    margin-right: 1rem;
+  }
+  .image p {
+    font-size: 0.8rem;
+  }
+  .image-text img {
+    height: 3svh;
+  }
+}
+
+.image-container {
+  display: grid;
+  grid-template-columns: 1fr 1fr 1fr;
+  grid-gap: 0.5rem;
+  box-shadow: 2px 2px 2px rgba(0, 0, 0, 0.2);
+  border-radius: 10px;
+  cursor: pointer;
+  border: 2px solid rgb(198, 193, 193);
+}
+
+.image {
+  border: 2px solid #aca2a2;
+  padding: 5px;
+  border-radius: 5px;
+}
+
+.image img {
+  width: 100%;
+}
+.image:hover {
+  transform: scale(1.05);
+  background-color: rgb(202, 240, 250);
+}
+.image p {
+  padding: 0.2rem;
+  text-align: center;
 }
